--- a/assets/css/banner/banner-imagem.css
+++ b/assets/css/banner/banner-imagem.css
@@ -1,4 +1,10 @@
 .banner__imagem {
+    background: url(../../img/banner.jpg) no-repeat center / cover;
+
+    background-image: url(../../img/banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     height: calc(100vh - 72px);
     width: 100%;
 }
