--- a/assets/css/banner/banner-imagem.css
+++ b/assets/css/banner/banner-imagem.css
@@ -1,10 +1,27 @@
-.banner__imagem {
+/*.banner__imagem {
     background: url(../../img/banner.jpg) no-repeat center / cover;
 
     /* background-image: url(../../img/banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center; */
-    height: calc(100vh - 72px);
+    /*height: calc(100vh - 72px);
     width: 100%;
+}*/
+
+.banner__imagem{
+    background: url('../../img/banner.jpg') no-repeat center / cover;
+    width: 100%;   
+}
+
+@media screen and (min-width: 0) {
+    .banner__imagem {
+        height: calc(100vh - 51px);
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .banner__imagem {
+        height: calc(100vh - 72px);
+    }
 }
