--- a/assets/css/sobre/sobre.css
+++ b/assets/css/sobre/sobre.css
@@ -1,4 +1,20 @@
-.sobre {
+/* .sobre {
     padding: 2.5rem;
     text-align: center;
+} */
+
+.sobre {
+    text-align: center;
+}
+
+@media screen and (min-width: 0) {
+    .sobre {
+        padding: 2.5rem 1rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .sobre {
+        padding: 2.5rem;
+    }
 }
